--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -1,9 +1,18 @@
-@book{brownHowKilledPluto2012,
-	address = {New York},
-	title = {How {I} killed {Pluto} and why it had it coming},
-	publisher = {Spiegel \& Grau},
-	author = {Brown, Mike},
-	year = {2012},
+@article{ludecke2021performance,
+  title={performance: An R package for assessment, comparison and testing of statistical models},
+  author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Waggoner, Philip and Makowski, Dominique},
+  journal={Journal of open source software},
+  volume={6},
+  number={60},
+  year={2021}
+}
+
+@article{jimenez2023dimensionality,
+  title={Dimensionality assessment in bifactor structures with multiple general factors: A network psychometrics approach.},
+  author={Jim{\'e}nez, Marcos and Abad, Francisco J and Garcia-Garzon, Eduardo and Golino, Hudson and Christensen, Alexander P and Garrido, Luis Eduardo},
+  journal={Psychological methods},
+  year={2023},
+  publisher={American Psychological Association}
 }
 
 @article{markos2024dimensionality,
